# Rust-Vendetta-Chess-GUI

./: CONTRIBUTING.md  Cargo.toml  README.md  RELEASE_NOTES_1.2.0.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/analysis/: Cargo.toml
crates/analysis/src/: aggregator.rs  comparator.rs  graph.rs  lib.rs  store.rs
crates/analysis/tests/: .fuse_hidden0000001800000009  phase5_integration.rs
crates/app_paths/: Cargo.toml
crates/app_paths/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: events.rs  game.rs  game_tree.rs  history.rs  lib.rs  movegen.rs  notation.rs  pgn.rs  polyglot.rs  rules.rs
crates/core/src/types/: board.rs  chess_move.rs  evaluation.rs  fen.rs  game_state.rs  mod.rs  piece.rs  position.rs  square.rs
crates/db/: Cargo.toml
crates/db/src/: eco_names.rs  import_export.rs  lib.rs  reference_import.rs  reference_schema.rs  schema.rs  scid_import.rs
crates/db/src/repository/: analysis_repo.rs  game_repo.rs  mod.rs  opening_repo.rs  position_repo.rs  puzzle_repo.rs  reference_game_repo.rs  tournament_repo.rs
crates/engine/: Cargo.toml
crates/engine/src/: .fuse_hidden0000000900000001  .fuse_hidden0000000a00000002  .fuse_hidden0000000c00000003  .fuse_hidden0000000d00000004  .fuse_hidden0000001000000006  comparator.rs  config.rs  handle.rs  lib.rs  logger.rs  pool.rs
crates/engine/tests/: .fuse_hidden0000001400000008  phase4_integration.rs
crates/game_config/: Cargo.toml
crates/game_config/src/: lib.rs  persist.rs
crates/gui/: Cargo.toml  build.rs
crates/gui/linux/: README.md  vendetta-chess.desktop
crates/gui/src/: analysis_bridge.rs  board_model.rs  chess_clock.rs  debug_log.rs  engine_scan.rs  game_bridge.rs  game_controller.rs  i18n_bridge.rs  lib.rs  main.rs  pdf_export.rs  png_export.rs  prefs.rs  puzzle_session.rs  tournament_runner.rs
crates/gui/tests/: phase16_integration.rs  phase26_integration.rs
crates/gui/ui/: app.slint  board.slint  captured_bar.slint  game_detail.slint  game_setup.slint  language_setup.slint  move_list.slint  position_editor.slint  preferences.slint  reference_browser.slint  score_graph.slint  theme.slint  tooltip_icon_button.slint  tournament_panel.slint  tournament_setup.slint  translations.slint  types.slint
crates/i18n/: Cargo.toml
crates/i18n/locales/: ar.toml  be.toml  bg.toml  bs.toml  cs.toml  da.toml  de.toml  el.toml  en.toml  es.toml  et.toml  fa.toml  fi.toml  fr.toml  he.toml  hi.toml  hr.toml  hu.toml  is.toml  it.toml  ja.toml  ko.toml  lb.toml  lt.toml  lv.toml  mk.toml  mt.toml  nl.toml  no.toml  pl.toml  pt.toml  ro.toml  ru.toml  sk.toml  sl.toml  sq.toml  sr.toml  sv.toml  uk.toml  zh.toml
crates/i18n/src/: lib.rs
crates/network/: Cargo.toml
crates/network/src/: lib.rs
crates/scid/: Cargo.toml
crates/scid/src/: bytes.rs  dates.rs  eco.rs  entry.rs  error.rs  game_blob.rs  lib.rs  moves.rs  names.rs  pgn_build.rs
crates/scid/src/si4/: database.rs  index.rs  mod.rs  namebase.rs
crates/scid/src/si5/: database.rs  index.rs  mod.rs  namebase.rs
crates/tournament/: Cargo.toml
crates/tournament/src/: lib.rs
crates/uci/: Cargo.toml
crates/uci/src/: engine.rs  lib.rs  parser.rs  process.rs  protocol.rs  state.rs
docs/: ARCHITECTURE.md  README.md  README_macOS.md  scid-si4-specification.md  scid-si5-specification.md
