[package]
name = "db"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
core = { path = "../core" }
rusqlite = { version = "0.31", features = ["bundled"] }
zstd = "0.13"
scid = { path = "../scid" }

[dev-dependencies]
tempfile = "3"
